--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,12 @@
 @import './base.css';
 
 body {
+  width: 100vw;
+  height: 100vh;
   background-color: #f3f2fa;
+  scroll-behavior: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
