--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,7 @@ body {
   height: 100vh;
   background-color: #f3f2fa;
   overflow-x: hidden;
+  overflow-y: scroll;
   margin: 0;
   padding: 0;
   display: flex;
